--- a/Holiday_Card_Final/index.html
+++ b/Holiday_Card_Final/index.html
@@ -1,1 +1,29 @@
 <html>
+  <head>
+
+<title> Holiday Card </title>
+
+<style>
+    </style>
+
+
+
+</head>
+
+<body>
+
+
+
+
+
+</body>
+
+
+
+
+
+
+
+
+
+</html>
